# prog_rgr

./: .gitignore  CMakeLists.txt  README.md  RGR.h  config.txt  main.c  script.c
tests/: test.c
